# msgraph-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/outlook_mcp/: config.py  server.py
src/outlook_mcp/auth/: cli.py  msal_app.py  token.py
src/outlook_mcp/graph/: auth_provider.py  batch.py  client.py  errors.py  pagination.py  serialize.py  trimming.py
src/outlook_mcp/tools/: __init__.py  calendar.py  mail_actions.py  mail_batch.py  mail_folders.py  mail_read.py  mail_rules.py  mail_write.py  teams_channels.py  teams_chats.py  teams_content.py  util.py
tests/: conftest.py  test_auth_cli.py  test_auth_msal_app.py  test_auth_token.py  test_config.py  test_graph_auth_provider.py  test_graph_batch.py  test_graph_client.py  test_graph_errors.py  test_graph_pagination.py  test_graph_serialize.py  test_graph_trimming.py  test_server.py  test_tools_calendar.py  test_tools_mail_actions.py  test_tools_mail_batch.py  test_tools_mail_folders.py  test_tools_mail_read.py  test_tools_mail_rules.py  test_tools_mail_write.py  test_tools_teams_channels.py  test_tools_teams_chats.py  test_tools_teams_content.py  test_tools_util.py
tests/fixtures/: __init__.py  event_minimal.json  message_minimal.json
tests/integration/: test_live_smoke.py  test_rules_and_folders_live.py
