[project]
name = "outlook-mcp"
version = "0.1.0"
description = "MCP server for Microsoft Outlook mail and calendar via msgraph-sdk"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "msgraph-sdk>=1.0",
    "msal>=1.31",
    "python-dotenv>=1.0",
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"
outlook-mcp-login = "outlook_mcp.auth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pyright>=1.1.380",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integration tests are skipped unless OUTLOOK_MCP_INTEGRATION=1
addopts = "--ignore=tests/integration"
