[project]
name = "outlook-mcp"
version = "0.1.0"
description = "MCP server for Microsoft Outlook mail and calendar via msgraph-sdk"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "msgraph-sdk>=1.0",
    "msal>=1.31",
    "python-dotenv>=1.0",
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"
outlook-mcp-login = "outlook_mcp.auth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pyright>=1.1.380",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integration tests are gated by tests/conftest.py — they skip unless
# OUTLOOK_MCP_INTEGRATION=1 is set in the environment.
#
# msgraph-sdk and kiota_abstractions emit DeprecationWarnings on import for
# nested *RequestConfiguration / GetQueryParameters classes whose generated
# bodies are scheduled for removal. Our code already uses the recommended
# generic RequestConfiguration[...]; these warnings come from the SDK module
# bodies themselves and fire regardless of how we consume them.
filterwarnings = [
    "ignore:.*GetQueryParameters is deprecated.*:DeprecationWarning:kiota_abstractions",
    "ignore:.*This class is deprecated.*:DeprecationWarning:msgraph.generated",
]
